// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/RaceListing changes descending sort on click 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            ID
            <span>
               
            </span>
          </button>
        </th>
        <th
          className="clickableCell"
          id="raceListing-th-series"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            Series
            <span>
               
            </span>
            <span
              className="glyphicon glyphicon-triangle-bottom"
            />
          </button>
        </th>
        <th
          className={null}
          id="raceListing-th-raceTimes"
        >
          Race times
          <span>
             
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            374
          </div>
        </td>
        <td
          className="clickableCell"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={
              {
                "minHeight": 50,
              }
            }
            type="button"
          >
            <span>
               
            </span>
            IndyCar iRacing Series
          </button>
        </td>
        <td
          className="clickableCell"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={
              {
                "minHeight": 50,
              }
            }
            type="button"
          >
            Set times
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            245
          </div>
        </td>
        <td
          className="clickableCell"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={
              {
                "minHeight": 50,
              }
            }
            type="button"
          >
            <span>
               
            </span>
            13th Week iRacing Figure GR8
          </button>
        </td>
        <td>
          <div>
            Every 30 minutes starting at 12:15 AM UTC
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing changes sort on click 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            ID
            <span>
               
            </span>
            <span
              className="glyphicon glyphicon-triangle-top"
            />
          </button>
        </th>
        <th
          className="clickableCell"
          id="raceListing-th-series"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            Series
            <span>
               
            </span>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            245
          </div>
        </td>
        <td
          className="clickableCell"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={
              {
                "minHeight": 50,
              }
            }
            type="button"
          >
            <span>
               
            </span>
            13th Week iRacing Figure GR8
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            374
          </div>
        </td>
        <td
          className="clickableCell"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            style={
              {
                "minHeight": 50,
              }
            }
            type="button"
          >
            <span>
               
            </span>
            IndyCar iRacing Series
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing renders correctly 1`] = `
<div
  className="table-responsive raceListing"
>
  <table
    className="table"
    style={
      {
        "fontSize": "0.8em",
      }
    }
  >
    <thead>
      <tr>
        <th
          className="clickableCell"
          id="raceListing-th-id"
        >
          <button
            className="cellButton"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            ID
            <span>
               
            </span>
            <span
              className="glyphicon glyphicon-triangle-top"
            />
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            245
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            374
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/RaceListing renders not found favourite cars 1`] = `
<p>
  No races this week match your favourite cars. Try turning the filter off or adding some.
</p>
`;

exports[`components/RaceListing renders not found favourite series 1`] = `
<p>
  No races this week match your favourite series. Try turning the filter off or adding some.
</p>
`;

exports[`components/RaceListing renders not found favourite tracks 1`] = `
<p>
  No races this week match your favourite tracks. Try turning the filter off or adding some.
</p>
`;
